--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
             try {
                 // Flask 서버로 POST 요청
-                const response = await fetch('http://localhost:5000/generate', {
+                const response = await fetch('http://localhost:5000/', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
